# PokemonBattle_Simulator

./: CMakeLists.txt  README.md  a.out  main  main.cpp  test  test.cpp  tests.cc
include/: \  attributes.h  data.h  dmg.h  move.h  nature.h  species.h  team.h
src/: \  attributes.h  battle.cpp  battle.hpp  data.h  player.hpp  team.h  tests.cpp  trainer.cpp  trainer.hpp  types.h
